# medi-check-backend

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENT_CONTEXT.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  deployment.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: api-docs-pages.yml  build-image.yml  release-cloudrun.yml
app/: __main__.py  main.py
app/core/: datetime.py  exception_handlers.py  exceptions.py  response.py  security.py  settings.py  validation_rules.py  validators.py
app/db/: session.py
app/dependencies/: auth.py  user.py
app/models/: __init__.py  care_invitation.py  care_relationship.py  history.py  medication.py  patient.py  schedule.py  user.py  user_session.py
app/repositories/: care_invitation.py  care_relationship.py  helpers.py  history.py  medication.py  patient.py  schedule.py  user.py  user_session.py
app/schemas/: auth.py  base.py  care_invitation.py  care_relationship.py  history.py  medication.py  patient.py  response.py  schedule.py  user.py
app/services/: __init__.py  access.py  auth.py  care_invitation.py  care_relationship.py  history.py  medication.py  patient.py  permissions.py  schedule.py  transactions.py  (+1 more)
deploy/: gcloud-deploy.ps1
docs/: api-flow.md  architecture.md  database-design.md  deployment-gcp.md  index.html  migration-workflow.md  openapi.json  openapi.yaml
infrastructure/: bootstrap-gcp.sh
k8s/: migration-job.yaml  service-account.yaml
migrations/: README  env.py
scripts/: export_openapi.py  generate_swagger.py
tests/: test_health.py
(+44 files in other folders)
